fixing alignment for gift

--- a/style.css
+++ b/style.css
@@ -9811,12 +9811,12 @@ footer a:hover, footer a:active, footer a:focus {
 
 .box {
   position: relative;
-  top: 110%;
+  top: 95%;
 }
 .box::before {
   content: "";
-  width: 440px;
-  height: 440px;
+  width: 400px;
+  height: 400px;
   background-color: #83da91;
   position: absolute;
   z-index: -1;
@@ -9830,7 +9830,7 @@ footer a:hover, footer a:active, footer a:focus {
   position: relative;
   height: 200px;
   width: 200px;
-  margin-top: 123.3333333333px;
+  margin-top: 103.3333333333px;
   background-color: #cc231e;
   border-bottom-left-radius: 5%;
   border-bottom-right-radius: 5%;
